# tree-sitter-cpp

./: .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.resolved  Package.swift  binding.gyp  go.mod  go.sum  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  fuzz.yml  lint.yml
bindings/c/: tree-sitter-cpp.pc.in
bindings/go/: binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_cpp/: __init__.py  binding.c
bindings/rust/: lib.rs
bindings/swift/TreeSitterCPPTests/: TreeSitterCPPTests.swift
corpus/: declarations.txt
queries/: highlights.scm
src/: grammar.json  node-types.json  scanner.c  scanner.cc
test/corpus/: alternatives.txt  ambiguities.txt  concepts.txt  declarations.txt  expressions.txt  microsoft.txt  modules.txt  reflection.txt  statements.txt
test/corpus/c/: expressions.txt
test/highlight/: keywords.cpp
